# PicoHaskell

./: CMakeLists.txt
end-to-end-tests/: run-tests.py
end-to-end-tests/test-programs/: example.hs  simple-string.hs  simple-string.txt
image-maker/: image-maker.py
image-maker/pico-sdk-project/: CMakeLists.txt  main.c
src/: CMakeLists.txt  main.cpp
src/generation/: CMakeLists.txt  generation.cpp
src/generation/include/generation/: generation.hpp
src/lexer/: CMakeLists.txt  layout.cpp  lex.l
src/lexer/include/lexer/: layout.hpp  yylex.hpp
src/parser/: CMakeLists.txt  driver.cpp  parser.yy  syntax.cpp
src/parser/include/parser/: driver.hpp  syntax.hpp
src/prelude/: CMakeLists.txt  prelude.cpp
src/prelude/include/prelude/: prelude.hpp
src/stg/: CMakeLists.txt  stg.cpp
src/stg/include/stg/: stg.hpp
src/types/: CMakeLists.txt  types.cpp
src/types/include/types/: type_check.hpp  types.hpp
tests/: CMakeLists.txt
tests/lexer/: CMakeLists.txt  lexer_test.cpp
tests/parser/: CMakeLists.txt  parser_test.cpp
tests/stg/: CMakeLists.txt  stg_test.cpp
tests/types/: CMakeLists.txt  types_test.cpp
tests/utilities/: CMakeLists.txt  test_utilities.cpp
tests/utilities/include/test/: test_utilities.hpp
